# hosmim-et-hatzir.github.io

./: index.html  package.json
.github/workflows/: android.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
